# CompilerConstruction

./: CMakeLists.txt  README.md  evaluation_scheme.md  example_input.md  submission.md
app/: mc_ast_to_dot.c  mcc.c
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  mc_ast_to_dot  mcc  parser_test
builddir/mcc@sha/: libmcc.so.symbols  parser.tab.c  parser.tab.h  scanner.c  scanner.h
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
include/mcc/: ast.h  ast_print.h  ast_visit.h  parser.h
mcc/: README.md  meson.build
mcc/app/: mc_ast_to_dot.c  mcc.c
mcc/docs/: development_notes.md
mcc/include/mcc/: ast.h  ast_print.h  ast_visit.h  error.h  parser.h  symtab.h
mcc/resources/: mc_builtins.c
mcc/src/: ast.c  ast_print.c  ast_visit.c  parser.c  parser.y  scanner.l  sementic_check.c  symbol_table.c
mcc/test/unit/: parser_test.c  semantic_chk_test.c  symbol_table_test.c
slides/: intro_slides.md
src/: ast.c  ast_print.c  ast_visit.c  parser.y  scanner.l
src/utils/: unused.h
test/unit/: parser_test.c
